--- a/Tecno_Coder/src/App.css
+++ b/Tecno_Coder/src/App.css
@@ -1,72 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body {
   height: 100%; 
   margin: 0;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 1024px;
+body {
+  background-color: #333;
 }
 
-.font-sans {
-  font-family: Arial, sans-serif;
+.item-list li { 
+  background-color: white;
+  border: 4px solid black;
+  padding: 20px; 
+  color: #555;  
 }
 
-.bg-gray-100 {
-  background-color: #f8f9fa;
-}
-
-.shadow-lg {
-  box-shadow: 0 2px 4px #ccc;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.border {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.rounded-lg {
-  border-radius: 8px;
-}
-
-.text-lg {
-  font-size: 1.5em;
-}
-
-.font-bold {
-  font-weight: bold;
-}
-
-/* Estilos para pantallas pequeñas */
-@media screen and (max-width: 768px) {
-  .navbar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem;
-  }
-
-  .navbar .brand,
-  .navbar .cart-widget {
-    margin: 1rem 0;
-  }
-
-  .navbar ul {
-    flex-direction: column;
-    width: 100%;
-    margin-top: 1rem;
-    align-items: center;
-  }
-
-  .navbar li {
-    margin: 0.5rem 0;
-  }
-
-  .navbar li:last-child {
-    margin-bottom: 0;
-  }
-}
+.item-list li h3, .item-list li p { 
+  color: #555;
+} 
