--- a/Tecno_Coder/src/components/CategoryList/CategoryList.css
+++ b/Tecno_Coder/src/components/CategoryList/CategoryList.css
@@ -1,21 +1,26 @@
 .category-list {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+  margin-bottom: 1rem;
+  text-align: center;
+}
   
-  .category-link {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    word-wrap: break-word;
-    align-items: center;
-  }
+.category-list ul {
+  list-style-type: none; 
+  padding: 0;
+}
+
+.category-list ul li {
+  border-radius: 20px; 
+  padding: 10px 15px; 
+}
+
+.category-link {
+  text-decoration: none; 
+  color: inherit; 
+  font-weight: bold;
+  word-wrap: break-word;
+  align-items: center;
+}
   
-  @media screen and (max-width: 768px) {
-    .category-list {
-      text-align: center; 
-      margin-left: auto; 
-      margin-right: auto; 
-      max-width: 90%;
-    }
-  }
+.category-link:hover {
+  color: white; 
+}
